# risk-churn-platform

./: .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  Dockerfile.datagen  Makefile  PROJECT_SUMMARY.md  QUICKSTART.md  README.md  cleanup.sh  deploy.sh  docker-compose.yml  main.py  pyproject.toml
.github/workflows/: ci.yml
config/: config.yaml
docs/: AUTHENTICATION_GUIDE.md  BLOG_POST.md  DASHBOARD_FEATURES.md  DASHBOARD_GUIDE.md  DASHBOARD_IMPLEMENTATION.md  DATA_GENERATOR.md  DEPLOYMENT.md  DEPLOYMENT_STATUS.md  GETTING_STARTED.md  PRODUCTION_DEPLOYMENT.md  PROJECT_SUMMARY.md  QUICKSTART.md  QUICK_START.md  README.md  REAL_DATA_INTEGRATION.md  TESTING_DEPLOYMENT_SUMMARY.md  TEST_COVERAGE_REPORT.md  _config.yml  index.md
examples/: data_generation_example.py  ecommerce_prediction_example.py  ecommerce_training_example.py  real_data_examples.py
frontend/: Dockerfile  README.md  nginx.conf  package-lock.json  package.json
frontend/public/: index.html
frontend/src/: App.css  App.tsx  index.css
frontend/src/components/: Layout.css  Layout.tsx
frontend/src/pages/: Analytics.css  Analytics.tsx  Dashboard.css  Dashboard.tsx  ModelManagement.css  ModelManagement.tsx  Monitoring.css  Monitoring.tsx  Predictions.css  Predictions.tsx
frontend/src/services/: api.ts
k8s/: drift-detector-deployment.yaml  kafka-deployment.yaml  monitoring-deployment.yaml  namespace.yaml  seldon-deployment-canary.yaml  seldon-deployment-shadow.yaml
models/v1/: model.pkl
models/v2/: model.pkl
scripts/: generate_synthetic_data.py  preprocess_real_data.py
src/risk_churn_platform/api/: rest_api.py
src/risk_churn_platform/auth/: __init__.py  api_key_auth.py
src/risk_churn_platform/config/: secrets.py
src/risk_churn_platform/data_generator/: __init__.py  kafka_producer_service.py  real_data_loader.py  synthetic_data_generator.py
src/risk_churn_platform/database/: __init__.py  models.py  repository.py
src/risk_churn_platform/deployment/: retraining.py
src/risk_churn_platform/explainers/: model_explainer.py
src/risk_churn_platform/kafka/: consumer.py  producer.py
src/risk_churn_platform/middleware/: __init__.py  rate_limiter.py
src/risk_churn_platform/models/: base.py  risk_scorer.py
src/risk_churn_platform/monitoring/: alerting.py  drift_detector.py  outlier_detector.py
src/risk_churn_platform/routers/: model_router.py
src/risk_churn_platform/transformers/: feature_transformer.py
tests/integration/: conftest.py  test_kafka_integration.py
tests/load/: README.md  artillery_config.yml  locustfile.py
tests/unit/: test_api.py  test_auth_simple.py  test_database_simple.py  test_explainer.py  test_kafka.py  test_models.py  test_monitoring.py  test_rate_limiter_simple.py  test_retraining.py  test_router.py  test_secrets_simple.py  test_transformer.py
