[project]
name = "risk-churn-platform"
version = "0.1.0"
description = "Risk/Churn Scoring Platform with Seldon Core - ML deployment with A/B testing, drift detection, and automated retraining"
readme = "README.md"
requires-python = ">=3.11"
authors = [
    {name = "Your Team", email = "team@example.com"}
]
keywords = ["machine-learning", "mlops", "seldon", "risk-scoring", "churn-prediction"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    # ML Framework
    "scikit-learn>=1.4.0",
    "numpy>=1.24.0",
    "pandas>=2.0.0",

    # Explainability
    "alibi>=0.9.0",
    "alibi-detect>=0.12.0",
    "shap>=0.44.0",

    # API
    "fastapi>=0.109.0",
    "uvicorn[standard]>=0.27.0",
    "grpcio>=1.60.0",
    "grpcio-tools>=1.60.0",
    "pydantic>=2.5.0",

    # Async & Messaging
    "kafka-python>=2.0.2",
    "aiokafka>=0.10.0",

    # Monitoring & Logging
    "prometheus-client>=0.8.0,<0.9.0",
    "structlog>=24.1.0",

    # Storage
    "redis>=5.0.0",
    "sqlalchemy>=2.0.0",
    "psycopg2-binary>=2.9.9",  # PostgreSQL driver

    # Utilities
    "python-dotenv>=1.0.0",
    "pyyaml>=6.0",
    "requests>=2.31.0",
]

[project.optional-dependencies]
dev = [
    # Testing
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "pytest-asyncio>=0.23.0",
    "pytest-mock>=3.12.0",
    "httpx>=0.26.0",
    "locust>=2.20.0",  # Load testing

    # Code Quality
    "ruff>=0.1.0",
    "black>=24.0.0",
    "mypy>=1.8.0",
    "isort>=5.13.0",
    "pre-commit>=3.6.0",
    "bandit>=1.7.0",  # Security linting
    "safety>=3.0.0",  # Dependency scanning

    # Type stubs
    "types-pyyaml>=6.0.0",
    "types-requests>=2.31.0",
    "pandas-stubs>=2.0.0",
]

kubernetes = [
    "kubernetes>=28.0.0",
]

production = [
    # AWS Secrets Manager
    "boto3>=1.34.0",
    # HashiCorp Vault
    "hvac>=2.1.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.black]
line-length = 100
target-version = ['py311']
include = '\.pyi?$'

[tool.isort]
profile = "black"
line_length = 100
multi_line_output = 3

[tool.ruff]
line-length = 100
target-version = "py311"
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
    "C4", # flake8-comprehensions
    "UP", # pyupgrade
]
ignore = [
    "E501",  # line too long (handled by black)
    "B008",  # do not perform function calls in argument defaults
]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
strict_equality = true

[[tool.mypy.overrides]]
module = [
    "seldon_core.*",
    "alibi.*",
    "alibi_detect.*",
    "shap.*",
    "kafka.*",
]
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "--strict-markers",
    "--cov=src",
    "--cov-report=term-missing",
    "--cov-report=html",
]
asyncio_mode = "auto"

[tool.coverage.run]
source = ["src"]
omit = ["*/tests/*", "*/test_*.py"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "class .*\\bProtocol\\):",
    "@(abc\\.)?abstractmethod",
]

[dependency-groups]
dev = [
    "httpx>=0.28.1",
]
